fieldx/tests/uncompilable/stable+serde,sync,async-tokio/serialize_off.stderr
warning: unused import: `Serialize`
 --> tests/uncompilable/serialize_off.rs
  |
  | use serde::{Deserialize, Serialize};
  |                          ^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `Foo: Serialize` is not satisfied
 --> tests/uncompilable/serialize_off.rs
  |
  |     let _json = serde_json::to_string(&foo);
  |                 --------------------- ^^^^ the trait `Serialize` is not implemented for `Foo`
  |                 |
  |                 required by a bound introduced by this call
  |
  = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Foo` type
  = note: for types from other crates check whether the crate offers a `serde` feature flag
  = help: the following other types implement trait `Serialize`:
            &'a T
            &'a mut T
            ()
            (T,)
            (T0, T1)
            (T0, T1, T2)
            (T0, T1, T2, T3)
            (T0, T1, T2, T3, T4)
          and $N others
note: required by a bound in `serde_json::to_string`
 --> $CARGO/serde_json-1.0.140/src/ser.rs
  |
  | pub fn to_string<T>(value: &T) -> Result<String>
  |        --------- required by a bound in this function
  | where
  |     T: ?Sized + Serialize,
  |                 ^^^^^^^^^ required by this bound in `to_string`
